k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaizeAPI-service
  namespace: backend
spec:
  selector:
    app: gaizeAPI
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
